--- a/funtome_support.html
+++ b/funtome_support.html
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="select">
-                        <div class="current select-input" onclick="selectChose(this);" data-key="" data-value=""></div>
+                        <div class="current select-input" onclick="selectChose(this);" data-key="" data-value="">Не получается пригласить друга</div>
                         <div class="list">
                             <div class="select-input list-item" onclick="selectItem(this)" data-key="1" data-value="Ошибка 1">
                                 Не приходит SMS с кодом активации
