--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -120,8 +120,14 @@
                             <input type="radio" id="radio1" name="radio" /> 
                             <label class="sorting-pak-style sorting-bold" for="radio1">новые</label>
                     </div>
-                    <div class="search-block"></div>
-                    <div class="structure"></div>
+                    <div class="search-block">
+                            <input class="input-search-pak mr20" type="text" placeholder="Поиск" color="#D5D5D5" />
+                            <img class="search-photo-pak" src="img/funtome-blog/Search.svg" alt="">
+                    </div>
+                    <div class="structure">
+                            <a href="#" class="paki-list"></a>
+                            <a href="#" class="paki-tabl"></a>    
+                    </div>
                 </div>
 
                 <div class="paki-catalog">
