Block-menu-bar Finish

--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -120,10 +120,11 @@
                             <input type="radio" id="radio1" name="radio" /> 
                             <label class="sorting-pak-style sorting-bold" for="radio1">новые</label>
                     </div>
-                    <div class="search-block">
-                            <input class="input-search-pak mr20" type="text" placeholder="Поиск" color="#D5D5D5" />
-                            <img class="search-photo-pak" src="img/funtome-blog/Search.svg" alt="">
-                    </div>
+                    <form class="search-block">
+                            <input class="input-search-pak" type="text" placeholder="Поиск" color="#D5D5D5" />
+                            <button type="submit"> </button>
+                            <!-- <img class="search-photo-pak" src="img/funtome-blog/Search.svg" alt=""> -->
+                    </form>
                     <div class="structure">
                             <a href="#" class="paki-list"></a>
                             <a href="#" class="paki-tabl"></a>    
