--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -147,11 +147,10 @@
                 </div>    
 
                 <div class="news-bar">
-                    <div class="blok-search">
+                    <form class="blok-search">
                         <input class="input-search mr20" type="text" placeholder="Search" color="#D5D5D5" >
-                        <img class="search-photo" src="img/funtome-blog/Search.svg" alt="">
-
-                    </div>
+                        <button type="submit"></button>
+                    </form>
                     <div class="blok-article">
                         <div class="article-text">Последние статьи</div>
                         <div class="blok-content">
