--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -132,7 +132,7 @@
 
                 <div id='paki-catalog' class="paki-catalog">
 
-                    <div class="card-paki">
+                    <div id="card-paki" class="card-paki">
                         <div class="photo-paki">
                             <div class="photo-paki-style" width="285" height="300">
                                     <svg class="svg-style" viewBox="0 0 285 300" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -159,6 +159,22 @@
                                     <li class="list-iteam">Переживаю</li>
                                     <li class="list-iteam">Удивляюсь</li>
                                 </div>
+
+                                <div class="list-megasse">
+                                    <li class="list-iteam">Доброе утро</li>
+                                    <li class="list-iteam">Прошу</li>
+                                    <li class="list-iteam">Бешусь</li>
+                                    <li class="list-iteam">Ржунимагу</li>
+                                    <li class="list-iteam">Люблю</li>
+                                    <li class="list-iteam">Смущаюсь</li>
+                                    <li class="list-iteam">Скучаю</li>
+                                    <li class="list-iteam">Обижаюсь</li>
+                                    <li class="list-iteam">Думаю о тебе</li>
+                                    <li class="list-iteam">Спокойной ночи</li>
+                                </div>
+
+                                <span class="list-butt"></span>
+
                             </div>
                             
                         </div>
@@ -392,8 +408,6 @@
                 </div> <!-- paki-catalog end -->
 
                 <div class="container-center">
-
-                    <a href="#" class="butt butt-green-border">Показать еще</a>
              
                     <div class="section-pages">
                         <ul class="pages">
