Add photo features

--- a/funtome_features.html
+++ b/funtome_features.html
@@ -115,7 +115,8 @@
                 <!--- Text Left -->
                 <div class="features-iteam">
                     <div class="features-photo mr50">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-left" src="img/funtome-features/001.png" alt="">
                     </div>
                     <div class="features-content">
                         <div class="features-title">
@@ -150,14 +151,16 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-right" src="img/funtome-features/002.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
                     <div class="features-photo mr50">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-left" src="img/funtome-features/003.png" alt="">
                     </div>
                     <div class="features-content">
                         <div class="features-title">
@@ -198,14 +201,16 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-right" src="img/funtome-features/004.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
                     <div class="features-photo mr50">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-left" src="img/funtome-features/005.png" alt="">
                     </div>
                     <div class="features-content">
                         <div class="features-title">
@@ -241,14 +246,16 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-right" src="img/funtome-features/006.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
                     <div class="features-photo mr50">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-left" src="img/funtome-features/007.png" alt="">
                     </div>
                     <div class="features-content">
                         <div class="features-title">
@@ -284,7 +291,8 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-img" src="img/funtome-features/features-photo.png" alt="">
+                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                        <img class="container-img-right" src="img/funtome-features/008.png" alt="">
                     </div>
                 </div>
 
