Features FINISH desc

--- a/funtome_features.html
+++ b/funtome_features.html
@@ -114,8 +114,7 @@
 
                 <!--- Text Left -->
                 <div class="features-iteam">
-                    <div class="features-photo mr50">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                    <div class="features-photo">
                         <img class="container-img-left" src="img/funtome-features/001.png" alt="">
                     </div>
                     <div class="features-content">
@@ -137,7 +136,7 @@
 
                 <!--- Text Richt -->
                 <div class="features-iteam">
-                    <div class="features-content mr50">
+                    <div class="features-content">
                         <div class="features-title">
                             <div class="number-photo">
                                 <img class="number" src="img/funtome-features/02.png" alt="">
@@ -151,15 +150,13 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
                         <img class="container-img-right" src="img/funtome-features/002.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
-                    <div class="features-photo mr50">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                    <div class="features-photo">
                         <img class="container-img-left" src="img/funtome-features/003.png" alt="">
                     </div>
                     <div class="features-content">
@@ -180,7 +177,7 @@
 
                 <!--- Text Richt -->
                 <div class="features-iteam">
-                    <div class="features-content mr50">
+                    <div class="features-content">
                         <div class="features-title">
                             <div class="number-photo">
                                 <img class="number" src="img/funtome-features/04.png" alt="">
@@ -201,15 +198,13 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
                         <img class="container-img-right" src="img/funtome-features/004.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
-                    <div class="features-photo mr50">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                    <div class="features-photo">
                         <img class="container-img-left" src="img/funtome-features/005.png" alt="">
                     </div>
                     <div class="features-content">
@@ -231,7 +226,7 @@
 
                 <!--- Text Richt -->
                 <div class="features-iteam">
-                    <div class="features-content mr50">
+                    <div class="features-content">
                         <div class="features-title">
                             <div class="number-photo">
                                 <img class="number" src="img/funtome-features/06.png" alt="">
@@ -246,15 +241,13 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
                         <img class="container-img-right" src="img/funtome-features/006.png" alt="">
                     </div>
                 </div>
 
                 <!--- Text Left -->
                 <div class="features-iteam">
-                    <div class="features-photo mr50">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
+                    <div class="features-photo">
                         <img class="container-img-left" src="img/funtome-features/007.png" alt="">
                     </div>
                     <div class="features-content">
@@ -277,7 +270,7 @@
 
                 <!--- Text Richt -->
                 <div class="features-iteam">
-                    <div class="features-content mr50">
+                    <div class="features-content">
                         <div class="features-title">
                             <div class="number-photo">
                                 <img class="number" src="img/funtome-features/08.png" alt="">
@@ -291,7 +284,6 @@
                         </div>
                     </div>
                     <div class="features-photo">
-                        <img class="container-fon" src="img/funtome-features/fon.png" alt="">
                         <img class="container-img-right" src="img/funtome-features/008.png" alt="">
                     </div>
                 </div>
